# igris_c_sdk_public

./: README.md
examples/: CMakeLists.txt  build.sh  hand_gui_client.cpp  lowlevel_example.md  metaquest.cpp  sdk_gui_client.cpp  sensor_config.cpp  sensor_viewer.cpp  service_example.cpp  service_example.md
examples/python/: metaquest.py  sensor_viewer.py
include/igris_sdk/: channel_factory.hpp  igris_c_msgs.hpp  publisher.hpp  subscriber.hpp  types.hpp
